--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -37,6 +37,12 @@
     "sent": "✅ Рассылка отправлена: {{sent}} из {{total}}",
     "failed": "❌ Ошибка рассылки"
   },
+  "export": {
+    "ordersHeader": "ID,Клиент,Телефон,Сумма,Статус,Комментарий,Дата",
+    "customersHeader": "ID,Имя,Телефон,Всего заказов,Общая сумма,Дата регистрации",
+    "productsHeader": "ID,Название,Цена,Дата создания",
+    "noName": "Без имени"
+  },
   "errors": {
     "unauthorized": "Необходима авторизация",
     "forbidden": "Доступ запрещен",
