--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -1,8 +1,14 @@
 {
   "common": {
-    "guest": "Гость"
+    "guest": "Гость",
+    "client": "Клиент",
+    "noName": "Без имени",
+    "noTitle": "Без названия"
   },
   "order": {
+    "client": "Клиент",
+    "amount": "Сумма",
+    "statusLabel": "Статус",
     "status": {
       "new": "Новый",
       "in_progress": "В работе",
@@ -10,6 +16,8 @@
       "cancelled": "Отменен"
     },
     "notifications": {
+      "new_order": "Новый заказ #{{id}}",
+      "order_saved": "Заказ сохранен в базе данных.",
       "in_progress": "Привет, {{name}}! Ваш заказ #{{id}} на сумму {{sum}} принят в работу.",
       "completed": "{{name}}, ваш заказ #{{id}} на сумму {{sum}} готов! Спасибо за заказ!",
       "cancelled": "{{name}}, к сожалению, ваш заказ #{{id}} на сумму {{sum}} отменен.",
@@ -39,7 +47,9 @@
   "broadcast": {
     "sending": "📤 Отправка рассылки...",
     "sent": "✅ Рассылка отправлена: {{sent}} из {{total}}",
-    "failed": "❌ Ошибка рассылки"
+    "failed": "❌ Ошибка рассылки",
+    "subscription_required": "Рассылки доступны на тарифах PRO (250 ⭐/мес) и PREMIUM (400 ⭐/мес)",
+    "no_customers": "Нет клиентов с Telegram ID в выбранном сегменте"
   },
   "export": {
     "ordersHeader": "ID,Клиент,Телефон,Сумма,Статус,Комментарий,Дата",
@@ -52,6 +62,14 @@
     "forbidden": "Доступ запрещен",
     "not_found": "Не найдено",
     "server_error": "Ошибка сервера",
-    "subscription_required": "Требуется подписка {{plan}}"
+    "subscription_required": "Требуется подписка {{plan}}",
+    "access_restricted": "Доступ ограничен",
+    "templates_subscription_required": "Шаблоны уведомлений доступны на тарифах PRO (250 ⭐/мес) и PREMIUM (400 ⭐/мес)",
+    "trial_already_used": "Триал уже использован",
+    "unknown_plan": "Неизвестный тариф",
+    "name_required": "Имя обязательно",
+    "title_required": "Название обязательно",
+    "not_found_product": "Товар не найден",
+    "delete_draft_only": "Можно удалять только новые заказы (черновики)"
   }
 }
